src/app/components/tickets-component/tickets-component.component.scss
main {
    display: flex;
    flex-direction: row;
    overflow-x: hidden;
}

// section.home-section {
//     width: 100%;
//     height: 100vh;
// }
.menu {
    flex: 1;
    // background-color: violet;
    max-width: 10vw;
    height: 100vh;
}
section.workspace {
    display: flex;
    flex-direction: row;
    background-color: inherit;
}
div.workspace-nav {
    flex: .5;
    background-color: inherit;
    // border-right: 1px solid #2d2d2ded;
    // height: 90vh !important;
}

// @media (min-width: 1200px) {
//     div.workspace-nav {
//         width: 120px;
//     }
// }

div.workspace-core {
    flex: 2;
    background-color: inherit;
    
    .container {
        overflow-y: hidden;
        height: 100vh;
        overflow-x: hidden;
        scrollbar-color: rgba(0,0,0,.3) rgba(0,0,0,.03);
        scrollbar-width: thin;
    }

    .h-scroll {
        overflow-y: scroll !important;
    }
}

.card-horizontal {
    display: flex;
    // flex: 1 1 auto;
  }

  .text-white {
      color: var(--ev-brandname-darkblue) !important;
  }

  .card-footer {
	padding: .5rem 1rem;
	background-color: inherit !important;
	border: none !important;
}

.card {
    box-shadow: none !important;
    transition: all .4s ease;
}

.card:hover {
    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05) !important;
}

.img-fit-img-fix-background-cover {
    border-radius: 0px;
    background-position: 50%;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 4px;
    height: 100%;
    }
    
    @media (max-height: 500px) and (orientation : landscape) {
    .img-fit-img-fix-background-cover {
      height: 50vh !important;
    }
    }
    
    @media (max-width: 1400px) and (min-height: 900px) {
    .img-fit-img-fix-background-cover {
    height: 30vh !important;
    }
    }
    
    @media (max-width: 1400px) and (max-height: 900px) {
    .img-fit-img-fix-background-cover {
    height: 30vh !important;
    }
    }

    .card-date {
        // position: absolute;
        // background-color: rgba(0,0,0,0.03);
        border-radius: 8px;
        padding: .4rem 1.4rem;
        color: var(--ev-brandname-orange);
        font-weight: bold;
        // transform: translate(-10px, -30px);
        word-wrap: break-word;
        text-align: center;
        // border: 1px solid rgba(0, 0, 0, 0.03);
        padding-left: 0;
    }

    .ticket {
        width: auto;
        height: auto;
        margin: 0;
        position: relative;
        transition: all 300ms cubic-bezier(0.03, 0.98, 0.53, 0.99) 0s;
        background: white;
        // border-radius: 20px;
        padding: 5px;
        // border: 1px solid rgba(0,0,0,.2);
      }
      
      .ticket:before,
      .ticket:after {
        content: '';
        display: block;
        position: absolute;
        top: 100px;
        width: 40px;
        height: 40px;
        border-radius: 50%;
        z-index: 2;
        background-color: white;
      }
      
      .ticket:before {
        border: 1px solid rgba(0, 0, 0, 0.04);
        border-top-color: transparent;
        border-left-color: transparent;
        transform: rotate(-45deg);
        left: -21px;
      }
      
      .ticket:after {
        border: 1px solid rgba(0, 0, 0, 0.04);
        border-top-color: transparent;
        border-left-color: transparent;
        transform: rotate(135deg);
        right: -21px;
      }
      
      .ticket-content-wrapper {
        width: 100%;
        height: 100%;
        position: relative;
        background: white;
        border-radius: 8px;
      }


      a, a:hover {
        text-decoration: none;
      }
      
      .icon {
        display: inline-block;
        width: 1em;
        height: 1em;
        stroke-width: 0;
        stroke: currentColor;
        fill: currentColor;
      }
      
      .wrapper {
        width: 100%;
        width: 100%;
        height: auto;
        min-height: 100vh;
        padding: 50px 20px;
        padding-top: 100px;
        display: flex;
        // background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
      
        display: flex;
        // background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
      
        @media screen and (max-width: 768px) {
          height: auto;
          min-height: 100vh;
          padding-top: 100px;
        }
      
      }
/* ... */

